2003-11-05  John  <jpff@codemist.co.uk>

	* util2/sndinfo/main.c (main): 
	* util2/dnoise.dir/srconv.c (main): 
	* util2/dnoise.dir/dnoise.c (main): Initialise e0dbfs in main as
	it is now in O structure

2003-11-05  John ffitch  <jpff@codemist.co.uk>

	* Opcodes/ugens6.c: reverb was not declared in opcode table

2003-11-04  John D. Ramsdell  <ramsdell@mitre.org>

	* configure.in: Added AM_INIT_AUTOMAKE, AM_PROG_CC_STDC, and code
	that adds -Wall when using GCC.

2003-11-02  John D. Ramsdell  <ramsdell@mitre.org>

	* AUTHORS, INSTALL, NEWS: Added empty files to be filled in when
	we comply with the GNU Coding Standards.

2003-11-1	Steven Y. Yi	<stevenyi@csounds.com>
	* rdorch.c: fixed printf statement in synterr() to use %c instead of %f

2003-10-29  John D. Ramsdell  <ramsdell@mitre.org>

	* csound.spec.in: Added an RPM spec for Csound.

2003-10-16  John ffitch  <jpff@codemist.co.uk>

	* H/csdl.h (getstring): 
	* Engine/oload.c: and initialise

	* H/cs.h (GLOBALS_): Added auxalloc and getstring

2003-10-14  John ffitch  <jpff@codemist.co.uk>

	* Top/main.c (mainRESET): Cannot call rtclose if no rtaudio

2003-10-13  John D. Ramsdell  <ramsdell@mitre.org>

	* uggab.c (anterpol): Made loop expression unambiguous.

	* ugens4.c: Int constants changed to unsigned long, as they do not
	fit as ints.

2003-07-24  John ffitch  <jpff@codemist.co.uk>

	* widgets.cpp (fl_slider_bank): Remove extern decl of zkstart/zklast

	* H/csdl.h: 
	* H/cs.h: 
	* Engine/oload.c: 
	* Opcodes/ugrw1.c: Moved zkstart/zklast to gloal structure

2003-06-18  John ffitch  <jpff@cs.bath.ac.uk>

	* H/ugens6.h: Added revlpsum and revlpsiz fields

	* Opcodes/ugens6.c (rvbset): Make reverbinit called internally to
	reverb to avoiud static array.

2003-06-16  John ffitch  <jpff@codemist.co.uk>

	* dl_opcodes.c (csoundLoadExternals): Added support for RESET
	function in modules.

2003-06-04  John ffitch  <jpff@codemist.co.uk>

	* wave.c (wavWriteHdr): peakdata.chunkDataSize needs lenlong call
